--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,30 +1,15 @@
-
-* {
-    margin: 0;
-    padding: 0;
+.mlk-picture {
+    opacity: 0.5;
+    margin: auto;
+    height: auto;
 }
 
-html,
 body {
-    font-size: 10px; 
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-seri
-    color: #00b894;
-    text-align: center;
-    background-color: #000000;
+    font-size: 23px;
+    background-color: #a6a6a6;
 }
-
 
 h1 {
-    font-size: 50px;
-}
-
-
-/****************/
-Pictures
-/****************/
-
-.mlk-picture {
-    border-radius: 50%; important! 
-
+    text-align: center;
 }
   
