--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,22 +1,25 @@
 
-.mlk-picture {
+
+
+#mlk-picture {
     max-width: 100%;
     margin: 0 auto;
     height: auto;
-  
 }
 
-.caption {
+#img-caption {
     text-align: center;
     margin-top: 5px;
-    
+    font-style: italic;
+    padding: 0 auto;
+    font-size: 25px;
 }
 
 html,
 body {
     font-size: 20px;
     background-color: #f5f5f5;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 h1 {
@@ -26,7 +29,6 @@ h1 {
   
 p {
     text-align: center;
-    font-size: 30px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    margin: 5px;
+    font-size: 20px;
+    margin-bottom: 5px;
 }
