--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,12 @@
 
-
+#img-div {
+    padding: 10px;
+    margin: 0;
+}
 
 #mlk-picture {
-    max-width: 100%;
+    display: block;
+    width: 45%;
     margin: 0 auto;
     height: auto;
 }
@@ -12,14 +16,20 @@
     margin-top: 5px;
     font-style: italic;
     padding: 0 auto;
-    font-size: 25px;
+    font-size: 17px;
 }
 
 html,
 body {
     font-size: 20px;
-    background-color: #f5f5f5;
+    background-color: #ffffffdc;
     font-family: 'Raleway', sans-serif;
+    max-width: auto;
+    
+}
+
+.intro {
+    background-color: rgba(255, 255, 255, 0.61);
 }
 
 h1 {
@@ -30,9 +40,20 @@ h1 {
 p {
     text-align: center;
     font-size: 20px;
-    margin-bottom: 5px;
+    margin: 20px auto;
+}
+
+#tribute-info {
+    text-align: center;
+}
+
+h3 {
+    margin: 50px 0;
+    text-align: center;
 }
 
 #timeline {
-    text-align: center;
+    text-align: left;
+    padding-left: 25%;
+    padding-right: 25%;
 }
