--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,8 +28,10 @@ body {
     
 }
 
-.intro {
-    background-color: rgba(255, 255, 255, 0.61);
+.upper {
+    background-color: rgba(163, 163, 163, 0.932);
+    width: 100%;
+    padding: 0 auto;
 }
 
 h1 {
