--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,13 +2,14 @@
 #img-div {
     padding: 10px;
     margin: 0;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(243, 243, 243);
 }
 
-#mlk-picture {
+#image {
+    max-width: 825px;
     display: block;
     width: 45%;
-    margin: 0 auto;
+    margin: auto;
     height: auto;
 }
 
